# structlog_telemetry

./: CHANGELOG.md  LICENSE  README.md  a.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  pytest.yaml  release.yaml
src/: singleton_base.py  structured_logger.py
src/structlog_telemetry/: __version__.py  banner.py  singleton_base.py  structlog_telemetry.py  structured_logger.py  structured_logger_telemetry.py  version.py
tests/: test_structured_logger.py
