[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]


[project]
name = "structlog_telemetry"
version = "0.0.32"
authors = [
  { name="Francis Obiagwu", email="cyber.francis@comcast.net" },
]
description = "A Structured Logger For Telemetry"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
keywords = ["structlog", "logging", "log", "telemetry", "observability"]
[project.urls]
Homepage = "https://github.com/cyber-francis/structlog_telemetry"
Issues = "https://github.com/cyber-francis/structlog_telemetry/issues"
